new routes to create list and styling

--- a/django_website/main/templates/main/list.html
+++ b/django_website/main/templates/main/list.html
@@ -4,13 +4,18 @@
 
 {% block content %}
     <h1>{{ls.name}}</h1>
+    <form action="#" method="post">
+        {% csrf_token %}
         <ul>
             {% for item in ls.item_set.all %}
-                {% if item.complete == False %}
-                    <li>{{item.text}} - Not Completed</li>
-                {% else %}
-                    <li>{{item.text}} - Completed</li>
-                {% endif %}
+                <li>
+                    <input type="checkbox" value="clicked" name="c{{item.id}}" {% if item.complete == True %}checked{% endif %}>
+                    {{item.text}}
+                </li>
             {% endfor %}
         </ul>
+        <button type="submit" name="save" value="save">Save</button>
+        <input type="text" name="new">
+        <button type="submit" name="newItem" value="newItem">Add Items</button>
+    </form>
 {% endblock %}  
