--- a/django_website/main/templates/main/create.html
+++ b/django_website/main/templates/main/create.html
@@ -3,12 +3,17 @@
 {% block title %}Create New List{% endblock %}
 
 {% block content %}
-Create Page
-<form action="/create/" method="post">
+<h3>Create Page</h3>
+<form action="/create/" method="post" class="form-group">
     {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit", name="save">
-        Create New List
-    </button>
+    <div class="input-group mb-3">
+        <div class="input-group-prepend"></div>
+        <button type="submit", name="save" class="btn btn-success">
+            Create New List
+        </button>
+        {{form.name}}
+    </div>
+    
+    
 </form>
 {% endblock %}
