--- a/django_website/main/templates/main/base.html
+++ b/django_website/main/templates/main/base.html
@@ -36,9 +36,11 @@
 </head>
 <body>
     <div class="sidenav">
+        <p style="color: white;">Hi {{user.username}}</p>
         <a href="/home">Home</a>
         <a href="/create">Create</a>
-        <a href="/2">View</a>
+        <a href="/view">View</a>
+        <a href="/logout">Logout</a>
     </div>
     <div class="content main" name="content">
         <div class="row justify-content-center">
@@ -48,9 +50,7 @@
                 {% block content %}
                 {% endblock %} 
             </div>
-            
         </div>
-         
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
